--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -2,6 +2,36 @@
   display: flex;
 }
 
+.viewport {
+  position: relative;
+}
+
+.ui {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+
+  & > * {
+    pointer-events: initial;
+  }
+}
+
+.startButton {
+}
+
+.gameText {
+  font-size: 18px;
+  line-height: 24px;
+  color: #fff;
+  text-shadow: #000;
+}
+
 .canvas {
   background: url('../../../public/bg.jpg') center;
 }
