--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -8,35 +8,82 @@
 
 .ui {
   position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-areas: 'screen';
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  user-select: none;
   pointer-events: none;
+}
 
-  & > * {
-    pointer-events: initial;
-  }
+.upper {
+  grid-area: screen;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 35%;
+}
+
+.centered {
+  grid-area: screen;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.column {
+  grid-area: screen;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .startButton {
+  pointer-events: initial;
+  padding: 8px 16px;
+  font-size: 32px;
+  line-height: 40px;
+  border: none;
+  appearance: none;
+  color: #fff;
+  cursor: pointer;
+  background: seagreen;
 }
 
 .gameText {
-  font-size: 18px;
-  line-height: 24px;
+  margin: 35px 8px 10px;
+  font-size: 24px;
+  line-height: 32px;
   color: #fff;
-  text-shadow: #000;
+  text-shadow: 1px 1px 3px #000;
+}
+
+.splashText {
+  line-height: 56px;
+  font-size: 48px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 5px;
+  color: #9effc9;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+
+  &.splashTextBad {
+    letter-spacing: initial;
+    color: #ff5454;
+  }
 }
 
 .canvas {
+  display: block;
   background: url('../../../public/bg.jpg') center;
 }
 
 .debugCanvas {
+  display: block;
 }
 
 .fpsCounter {
