--- a/src/components/CountriesCanvas/CountriesCanvas.module.css
+++ b/src/components/CountriesCanvas/CountriesCanvas.module.css
@@ -1,4 +1,5 @@
 .root {
+  display: none;
   position: relative;
   width: 525px;
   height: 394px;
@@ -7,10 +8,12 @@
 }
 
 .canvas {
+  /*
   position: absolute;
   top: 0;
   left: 0;
   background: #000;
   transform: scale(0.25);
   transform-origin: 0 0;
+  */
 }
