--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -3,7 +3,10 @@
 }
 
 .viewport {
-  position: relative;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .ui {
@@ -86,21 +89,12 @@
   display: block;
 }
 
-.fpsCounter {
-  position: fixed;
-  top: 0;
-  right: 0;
-  white-space: nowrap;
-  pointer-events: none;
-  user-select: none;
-}
-
 .output {
   position: fixed;
   display: flex;
   flex-direction: column;
   align-items: end;
-  top: 20px;
+  top: 0;
   right: 0;
   margin: 0;
   user-select: none;
