--- a/src/components/StartMenu/StartMenu.module.scss
+++ b/src/components/StartMenu/StartMenu.module.scss
@@ -2,6 +2,18 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  animation: fromTop 0.5s ease-out;
+}
+
+@keyframes fromTop {
+  from {
+    opacity: 0;
+    transform: translate(0, -500px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
 }
 
 .startButton {
