--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -43,10 +43,23 @@
   color: #fff;
   text-shadow: 1px 1px 3px #000;
   text-align: center;
+
+  &.starting {
+    animation: starting 0.8s forwards;
+  }
 }
 
 .warming {
   color: #ffcaca;
+}
+
+@keyframes starting {
+  from {
+    transform: translate(0, -200px);
+  }
+  to {
+    transform: translate(0, 0);
+  }
 }
 
 .cool {
@@ -54,9 +67,38 @@
 }
 
 .countryName {
+  display: block;
   line-height: 38px;
   font-size: 30px;
   color: #22ff1a;
+
+  &.animate {
+    animation: country-appear 0.4s forwards;
+  }
+
+  &.animateOut {
+    animation: country-hide 0.3s forwards;
+  }
+}
+
+@keyframes country-appear {
+  from {
+    opacity: 0;
+    transform: scale(3);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes country-hide {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 .canvas {
