--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -19,6 +19,20 @@
   height: 100%;
   user-select: none;
   pointer-events: none;
+
+  &.crosshair {
+    &::after {
+      position: absolute;
+      content: '';
+      top: 50%;
+      left: 50%;
+      width: 8px;
+      height: 8px;
+      margin: -4px;
+      border-radius: 50%;
+      background: red;
+    }
+  }
 }
 
 .centered {
